--- a/app_on_the_way/src/main/res/layout/activity_on_the_way_main.xml
+++ b/app_on_the_way/src/main/res/layout/activity_on_the_way_main.xml
@@ -4,13 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/root"
     tools:context=".OnTheWayMainActivity">
+
     <com.amap.api.maps.MapView
 
         android:id="@+id/mv_map"
 
         android:layout_width="match_parent"
 
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/root" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
